<resources>
    <string name="app_name">wise-memory-optimizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="font_italic">fonts/Poppins-BlackItalic.ttf</string>
    <string name="font_bold">fonts/Poppins-Bold.ttf</string>
    <string name="font_regular">fonts/Poppins-Regular.ttf</string>
    <string name="font_black">fonts/Poppins-Black.ttf</string>
    <string name="font_medium">font/Poppins_medium500.ttf</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_batter_obtimize">Battery Optimize</string>
    <string name="tv_ram_obtimize">Ram Optimize</string>
    <string name="tv_cpu_booster">CPU Booster</string>
    <string name="tv_internet_speed">Internet Speed</string>
    <string name="tv_delete_duplicate">Delete Duplicate</string>
    <string name="tv_change_vpn">Change VPN</string>
    <string name="connecting_time">Connecting Time</string>
    <string name="overall">Overall</string>
    <string name="txt_optimizer">Optimizer</string>
    <string name="ram_currently_used">Ram currently used</string>
    <string name="ram_total">Total amount of RAM</string>
    <string name="ram_usage">Ram Usage</string>
    <string name="download_mbps">DOWNLOAD Mbps</string>
    <string name="upload_mbps">UPLOAD Mbps</string>
    <string name="ping_ms">PING ms</string>
    <string name="check">Check</string>
    <string name="location_checked">Location checked</string>
    <string name="internet_speed">Internet Speed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="ex_living_room">Ex: Living Room</string>
    <string name="name_location">Name location</string>
    <string name="tv_application">Application developed</string>
    <string name="tv_by_company">by Merry Blue</string>
    <string name="tv_looking_duplicate">Looking for duplicate files</string>
    <string name="tv_used_storage">Used Storage</string>
    <string name="tv_title_delete_duplicate">Delete Duplicate</string>
    <string name="tv_title_android">Android</string>
    <string name="tv_title_obtimze">Optimize</string>
    <string name="tv_available">Available:</string>
    <string name="tv_total">Total:</string>
    <string name="tv_used">Used</string>
    <string name="tv_can_deleted">Can deleted</string>
    <string name="tv_analysis">Analysis</string>
    <string name="tv_same_photo">Same photo</string>
    <string name="tv_low_quality">Low quality photo</string>
    <string name="tv_same_video">Same Video</string>
    <string name="tv_same_file">Same File</string>
    <string name="tv_optimize_memory">You can optimize memory</string>
    <string name="tv_delete_image">Delete Image</string>
    <string name="tv_delete_file">Delete File</string>
    <string name="tv_delete_video">Delete Video</string>
    <string name="tv_des_delete_image">You can delete unnecessary photos</string>
    <string name="tv_des_delete_file">You can delete files</string>
    <string name="tv_des_delete_video">You can delete the video</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="ip">IP: </string>
    <string name="speed_down_up">KB/s</string>
    <string name="vpn">VPN</string>
    <string name="done">Done</string>
    <string name="vpn_being_change">VPN is being changed</string>
    <string name="rename">Rename</string>
    <string name="there_are_currently_no_checked_locations">There are currently no checked locations</string>
    <string name="location">Location:</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting...</string>
    <string name="waiting_for_server_connection">Waiting for server connection!!</string>
    <string name="server_authenticating">Server authenticating!!</string>
    <string name="reconnecting">Reconnecting...</string>
    <string name="no_network_connection">No network connection</string>
    <string name="location_vpn">Location</string>
    <string name="smart_location">Smart Location</string>
    <string name="all_server">All Server</string>
    <string name="dot">●</string>
    <string name="error_connect_vpn">There was an error while changing the server. Please choose another server</string>
    <string name="success_connect_vpn">VPN address has been changed successfully</string>
    <string name="error_network_vpn">Please enable network connection for this function</string>
    <string name="error_load_server">Loading server failed. Please choose another server</string>
    <string name="getting_vpn_information">Getting VPN information</string>
    <string name="ok_vpn">Ok</string>
    <string name="on_vpn">ON</string>
    <string name="off_vpn">OFF</string>
    <string name="ms">ms</string>
    <string name="total_location">%s Locations</string>
    <string name="toast_could_not_clean_reason">Could not clean the cache: %1$s</string>
    <string name="rationale_title">Insufficient permissions</string>
    <string name="cleaning_cache">Cleaning cache</string>
    <string name="cleaning_in_progress">Cleaning in progress…</string>
    <string name="clean_on_app_startup">Clean on app startup</string>
    <string name="clean_on_app_startup_summary">Automatically clean cache on application startup</string>
    <string name="clean_on_app_startup_key" translatable="false">clean_on_app_startup</string>
    <string name="exit_after_clean">Exit after clean up</string>
    <string name="exit_after_clean_summary">Exit after Clean button is clicked and clean up is completed</string>
    <string name="exit_after_clean_key" translatable="false">exit_after_clean</string>
    <string name="clean_on_system_startup_key" translatable="false">clean_on_device_startup</string>
    <string name="cleaned">Cache cleaned</string>
    <string name="toast_could_not_clean">Could not clean the cache</string>
    <string name="pc_charging_status">Charging Status</string>
    <string name="all_charging_problem_was_fixed">All charging problem was fixed</string>
    <string name="txt_battery">Battery</string>
    <string name="power_full">Power full</string>
    <string name="noti_battery_charging_timer_left">Charging left</string>
    <string name="time_left">Time left</string>
    <string name="fahrenheit">°F</string>
    <string name="celsius">°C</string>
    <string name="toast_mode_title">Has switched to</string>
    <string name="super_saving">Prolong</string>
    <string name="normal">Normal</string>
    <string name="custom">Sleep</string>
    <string name="my_mode">My Mode</string>
    <string name="battery_full_des">Charging finished. Please unplug the power.</string>
    <string name="du_home_digital_time_hour">h</string>
    <string name="du_home_digital_time_minute">m</string>
    <string name="battery_life_time">Battery life time</string>
    <string name="estimate_time">Estimated time</string>
    <string name="txt_title_history_of_battery_usage">History of battery usage</string>
    <string name="optimizing">Optimizing</string>
    <string name="optimizing1">Optimizing.</string>
    <string name="optimizing2">Optimizing..</string>
    <string name="optimizing3">Optimizing...</string>
    <string name="optimizing4">Optimizing....</string>
    <string name="txt_option_ram">RAM</string>
    <string name="txt_option_cpu">CPU</string>
    <string name="txt_option_pin">PIN</string>
    <string name="delete">Delete</string>
    <string name="same_photo">Same Photo</string>
    <string name="same_video">Same Video</string>
    <string name="same_file">Same File</string>
    <string name="low_quality">Lowquality</string>
    <string name="unit_mb_per_s">Mb/s</string>
    <string name="unit_empty" translatable="false"></string>
    <string name="txt_auto_optimize_ram">Auto Optimize RAM</string>
    <string name="txt_ram_exceeds">Auto-optimize if Ram exceeds:</string>
    <string name="txt_auto_optimize_cpu">Auto Optimize CPU</string>
    <string name="txt_cpu_exceeds">Auto-optimize if CPU exceeds:</string>
    <string name="txt_auto_optimize_pin">Auto Optimize PIN</string>
    <string name="txt_battery_is_even_lower">Auto-optimize if Battery is even lower:</string>
    <string name="txt_description_abount_app">"Are you running out of application storage?
Are you looking for an Internet speed meter to monitor?
Do you want to protect your location from tracking?

You're so lucky! Smart Optimizer - Phone Cleaner is the most perfect answer to all your worries. Not only is an application to optimize memory, this app also gives you many more uses:
★ Ram Optimizes
★ Battery Optimizes
★ CPU Booster
★ Internet Speed
★ Delete Duplicate
★ Change VPN
6 functions in ONE app - It's no exaggeration to say that this is the best app for your phone!"</string>
    <string name="txt_label_abount_app">Best Lock Apps to Hide Photos</string>
    <string name="txt_version_abount_app">Version 1.0.22</string>
    <string name="txt_dialog_automatic_optiomization">Automatic optimization mode \n has been Activated</string>
    <string name="txt_language_in">Indonesian</string>
    <string name="txt_language_thai">Thai</string>
    <string name="txt_language_malay">Malaysian</string>
    <string name="txt_language_en">English</string>
    <string name="txt_language_vi">Vietnamese</string>
    <string name="txt_language_spanish">Spanish</string>
    <string name="txt_language_portuguese">Portuguese</string>
    <string name="txt_language_russiane">Russian</string>
    <string name="txt_language_ja">Japanese</string>
    <string name="txt_language_korean">Korean</string>
    <string name="txt_language_french">French</string>
    <string name="txt_language_german">German</string>
    <string name="txt_language_arabic">Arabic</string>
    <string name="txt_language_chi">Chinese</string>
    <string name="txt_language_chinese_Simplified">Chinese (Simplified )</string>
    <string name="txt_language_chinese_Traditional">Chinese (Traditional)</string>
    <string name="txt_option_kbs">Kb/s</string>
    <string name="recheck">Recheck</string>
</resources>