<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_opacity_65"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_loading_vpn"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivContent"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/load_vpn" />

        <com.example.wise_memory_optimizer.custom.ExtTextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vpn_being_change"
            android:textColor="@color/white"

            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/ivContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textViewFontAssetName="@string/font_regular" />

        <com.example.wise_memory_optimizer.custom.ExtTextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textColor="@color/color_yellowff"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContent"
            app:textViewFontAssetName="@string/font_regular" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.wise_memory_optimizer.custom.ExtTextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_xxlarge"
        android:background="@drawable/bg_gray_45"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:textViewFontAssetName="@string/font_regular" />

</LinearLayout>