<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_popup"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_gray_dialog_new"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_oval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp"
                android:src="@drawable/ic_ellipse_17" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/iv_oval"
                android:layout_alignTop="@+id/iv_oval"
                android:layout_alignEnd="@+id/iv_oval"
                android:layout_alignBottom="@+id/iv_oval"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:src="@drawable/ic_robot_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_oval"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_regular400"
                android:gravity="center"
                android:text="@string/txt_dialog_automatic_optiomization"
                android:textColor="#D9D9D9"
                android:textSize="@dimen/_12ssp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/label"
                android:layout_marginTop="@dimen/padding_normal"
                android:background="#26FFFFFF" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:gravity="center"
                android:padding="@dimen/padding_normal"
                android:text="@string/ok_vpn"
                android:textColor="@color/color_green_00"
                android:textSize="@dimen/text_size_middle_large"
                app:textViewFontAssetName="@string/font_regular" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>